@startuml console_chat_service
!pragma layout smetana
title console_chat - server service and domain model

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam wrapWidth 220

package "Server application (chat_server)" {
  class ServerMain <<entry_point>> {
    +main(argc, argv) : int
  }

  class Session <<module>> {
    +HandleClientSession(client, service, serviceMutex, adminCredentials, sessionRegistry, clientIdleTimeout)
  }

  class SessionRegistry {
    +Register(login, socket)
    +Unregister(login, socket)
    +KickUser(login) : bool
  }

  class RequestRouter <<module>> {
    +HandleRequest(req) : ResponseParts
  }

  class RequestContext <<struct>> {
    +currentLogin : string
    +isAdmin : bool
  }

  class AdminCredentials <<struct>> {
    +Login : string
    +Password : string
    +Enabled : bool
  }

  class AdminConfig <<module>> {
    +LoadAdminCredentials(filePath, credentials, error) : bool
  }

  class ServerConfigLoader <<module>> {
    +LoadServerConfig(filePath, config, error) : bool
  }

  class ServerConfig <<struct>> {
    +Limits : ServiceLimits
    +ClientIdleTimeout : seconds
  }

  class Protocol <<module>> {
    +Split(line, delim) : RequestParts
    +Join(parts, delim) : string
  }
}

package "Core service" {
  class ChatService {
    +ChatService()
    +ChatService(limits)
    +ChatService(storageManager)
    +ChatService(storageManager, limits)
    +Initialize() : bool
    +Register(name, login, password) : bool
    +Authenticate(login, password) : bool
    +GetUserNameByLogin(login) : string
    +GetMyChats(currentLogin) : ChatNames
    +CreatePrivateChat(currentLogin, recipientLogin, chatName) : bool
    +GetPrivateChatName(firstLogin, secondLogin) : string
    +GetMessages(currentLogin, chatName) : Messages
    +SendMessage(currentLogin, chatName, text) : bool
    +GetAllUserLogins() : UserLogins
    +GetAllUsersInfo() : UserInfos
    +GetUserInfo(login, info) : bool
    +GetAllChatNames() : ChatNames
    +ChatNameExists(name : string) : bool
    +GetAllChatsInfo() : ChatInfos
    +GetMessagesForAdmin(chatName) : Messages
    +SendAdminMessageToGeneral(text) : bool
    +CreateAdminPrivateChat(recipientLogin, chatName) : bool
    +SendAdminMessageToChat(chatName, text) : bool
    +BanUser(login, period) : bool
    +UnbanUser(login) : bool
    +IsUserBanned(login) : bool
    +DeleteUserAccount(login) : bool
    +DeleteForeverBannedUsers(deletedCount) : bool
    +ImportState(state) : bool
    -FindUser(login) : UserPtr
    -FindChat(name) : BaseChatPtr
    -m_users : UserMap
    -m_chats : ChatMap
    -m_storageManager : IManagerPtr
    -m_limits : ServiceLimits
  }

  class ServiceLimits <<struct>> {
    +MaxUsers : size_t
    +MaxChats : size_t
    +MaxPrivateChatsPerUser : size_t
    +MaxMessageLength : size_t
    +MaxMessagesPerChat : size_t
  }

  class User {
    +User(name, passwordHash, bannedUntilEpoch, bannedForever)
    +GetName() : string
    +CheckPassword(password) : bool
    +GetPasswordHash() : string
    +GetBannedUntilEpoch() : int64_t
    +IsBannedForever() : bool
    +IsBannedAt(nowEpoch) : bool
    +SetBan(bannedUntilEpoch, bannedForever)
    -m_name : string
    -m_passwordHash : string
    -m_bannedUntilEpoch : int64_t
    -m_bannedForever : bool
  }

  enum BanPeriod {
    OneDay
    TenDays
    Month
    Year
    Forever
  }

  class PasswordProtector {
    {static} +Hash(password) : string
    {static} +Verify(password, expectedHash) : bool
    {static} +IsHash(value) : bool
    {static} -HASH_PREFIX : string_view
  }

  class BaseChat {
    +BaseChat(maxMessages)
    +~BaseChat()
    +IsParticipant(login) : bool
    +IsPrivate() : bool
    +GetMessages() : Messages
    +AddMessage(message) : bool
    #m_messages : Messages
    -m_maxMessages : size_t
  }

  class PrivateChat {
    +PrivateChat(user1, user2, maxMessages)
    +IsParticipant(login) : bool
    +IsPrivate() : bool
    +HasUser(login) : bool
    +GetUsers() : TwoUserLogins
    -m_users : TwoUserLogins
  }

  class Message <<struct>> {
    +Name : string
    +Text : string
  }

  class UserInfo <<struct>> {
    +Login : string
    +Name : string
    +BannedUntilEpoch : int64_t
    +BannedForever : bool
    +BannedNow : bool
  }

  class ChatInfo <<struct>> {
    +Name : string
    +IsPrivate : bool
    +Participants : TwoUserLogins
  }
}

package "Storage" {
  interface IManager {
    +Initialize() : bool
    +Load(state) : bool
    +AddUser(user) : bool
    +AddChat(chat) : bool
    +AddMessage(chatName, senderLogin, message, maxMessagesPerChat) : bool
    +AddAdminMessage(chatName, message, maxMessagesPerChat) : bool
    +UpdateUserBan(login, bannedUntilEpoch, bannedForever) : bool
    +DeletePrivateChatsWithUser(login) : bool
    +DeleteUser(login) : bool
    +Reset() : bool
  }

  class FileManager
  class MySQLConfig
  class MySQLManager <<implemented>>
}

package "Network" {
  class TcpSocket {
    +BindAndListen(port, backlog)
    +Accept() : TcpSocket
    +SendLine(line) : bool
    +RecvLine(line) : bool
    +SetReceiveTimeout(timeout) : bool
    +WasLastReceiveTimedOut() : bool
    +IsValid() : bool
  }
}

class "users.db / chats.db" as StateFiles <<storage>>

ServerMain ..> ChatService : creates shared instance
ServerMain ..> FileManager : --storage file
ServerMain ..> MySQLManager : --storage mysql
ServerMain ..> TcpSocket : listen and accept
ServerMain ..> Session : detached thread per client
ServerMain ..> AdminConfig : load --admin-config
ServerMain ..> ServerConfigLoader : load --server-config
ServerMain ..> SessionRegistry : creates shared registry
ServerConfigLoader ..> ServerConfig
ServerConfig ..> ServiceLimits
ServerConfig ..> Session : client timeout
ChatService ..> ServiceLimits : configured limits
Session ..> TcpSocket : receive and send lines
Session ..> SessionRegistry : register / unregister
Session ..> Protocol : Split / Join
Session ..> RequestRouter : route request under mutex
RequestRouter ..> RequestContext : updates session state
RequestRouter ..> AdminCredentials : checks ADMIN_LOGIN
RequestRouter ..> SessionRegistry : kick users
RequestRouter ..> ChatService : execute command
ChatService --> IManager : load and persist mutations
IManager <|.. FileManager
IManager <|.. MySQLManager
MySQLManager --> MySQLConfig
FileManager --> StateFiles

ChatService *-- User : m_users
ChatService *-- BaseChat : m_chats
ChatService ..> BanPeriod : calculate ban expiration
ChatService ..> UserInfo
ChatService ..> ChatInfo
BaseChat *-- Message : m_messages
BaseChat <|-- PrivateChat
PrivateChat ..> User : participants identified by login
User ..> PasswordProtector : Verify()
ChatService ..> PasswordProtector : Hash() / IsHash()
ChatService ..> PrivateChat : create and inspect

note right of RequestRouter
  Supported commands:
  REGISTER, LOGIN, LOGOUT, IS_AUTH,
  CUR_USER, CUR_LOGIN, GET_MY_CHATS, CREATE_PRIVATE,
  DELETE_ACCOUNT, GET_MESSAGES, SEND_MESSAGE, GET_ALL_USERS,
  ADMIN_LOGIN, ADMIN_GET_USERS,
  ADMIN_GET_CHATS, ADMIN_CREATE_PRIVATE,
  ADMIN_GET_MESSAGES, ADMIN_SEND_CHAT,
  ADMIN_SEND_GENERAL, ADMIN_KICK_USER,
  ADMIN_BAN_USER, ADMIN_UNBAN_USER,
  ADMIN_DELETE_FOREVER_BANNED_USERS
end note

note right of Session
  steady_clock tracks the idle deadline.
  POLL reads never reset it; ACTIVITY and
  ordinary requests update user activity.
  Receive timeout uses the remaining time.
  ADMIN_KICK_USER sends
  "disconnected by ADMIN" before closing
  active user sockets.
end note

note right of ChatService
  Default domain limits:
  - GENERAL chat always exists
  - maximum users is 0 meaning unlimited
  - maximum 991 chats on server
  - maximum 45 private chats per user
  - maximum message length is 256
  - maximum 1000 messages per chat
  Server can override them via server.conf.
  - admin messages use visible name ADMIN
  - admin private chats use hidden login __admin__
  - forever ban is cleaned up by separate admin command
end note

note bottom of PasswordProtector
  Passwords are stored as salted hashes
  with the h1$ prefix.
end note

@enduml

@startuml console_chat_service_request
title console_chat - service request processing

skinparam shadowing false
skinparam sequenceMessageAlign center
skinparam wrapWidth 220

participant "TcpSocket" as Socket
participant "HandleClientSession" as Session
participant "Protocol" as Protocol
participant "HandleRequest" as Router
participant "SessionRegistry" as Registry
participant "ChatService" as Service
participant "BaseChat / PrivateChat" as Chat
database "users.db / chats.db" as State

Socket -> Session : RecvLine(request)
Session -> Protocol : Split(request, TAB)
Protocol --> Session : request parts

group shared service mutex locked
  Session -> Router : HandleRequest(parts, service, context, adminCredentials, registry)
  alt ADMIN_LOGIN
    Router -> Router : validate AdminCredentials
    Router -> Router : context.isAdmin = true
  else user or admin command
    Router -> Service : call command method
    Service -> Service : validate user, arguments and limits

    opt chat command
      Service -> Chat : participant check or message operation
      Chat --> Service : result
    end

    opt registration, chat creation, message, ban, account deletion or private cleanup
      Service -> State : AddUser / AddChat / AddMessage / UpdateUserBan / DeletePrivateChatsWithUser / DeleteUser
      State --> Service : write result
      Service -> Service : update memory after success
    end

    Service --> Router : operation result
  end

  opt kick or ban active user
    Router -> Registry : KickUser(login)
  end

  Router --> Session : OK data or ERR description
end

Session -> Protocol : Join(response, TAB)
Protocol --> Session : response line
Session -> Socket : SendLine(response)

@enduml
